--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,73 @@
+@import url(style/theme.css);
+
+:root {
+  font-size: 18px;
+}
+
 body {
-  background-color: #282c34;
+  background-color: var(--bg1);
+  font-family: "Courier New", Courier, monospace;
 }
 
 .App {
+  font-size: 1rem;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  color: var(--c1);
+}
+
+.header {
   text-align: center;
+  color: var(--c2);
+  background-color: var(--bg2);
+  padding: 2rem;
+}
+
+.slogan {
+  position: absolute;
+  color: yellow;
+  font-size: 1rem;
+  rotate: 15deg;
+  translate: -1.5rem -0.2rem;
+}
+
+.slogan-wiggle {
+  animation-name: sloganWiggle;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+}
+
+.slogan-scale {
+  animation-name: sloganScale;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes sloganWiggle {
+  0% {
+    rotate: 30deg;
+  }
+  50% {
+    rotate: -30deg;
+  }
+  100% {
+    rotate: 30deg;
+  }
+}
+
+@keyframes sloganScale {
+  0% {
+    transform: scale(100%);
+  }
+  50% {
+    transform: scale(50%);
+  }
+  100% {
+    transform: scale(100%);
+  }
+}
+
+.nav {
+  list-style: none;
 }
