--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url(style/theme.css);
 
 :root {
-  font-size: 18px;
+  font-size: 1.6vmin;
 }
 
 body {
@@ -10,10 +10,9 @@ body {
 }
 
 .App {
-  font-size: 1rem;
+  font-size: calc(1em * 5);
   margin: 0;
   padding: 0;
-  min-height: 100vh;
   color: var(--c1);
 }
 
@@ -21,15 +20,16 @@ body {
   text-align: center;
   color: var(--c2);
   background-color: var(--bg2);
-  padding: 2rem;
+  padding: 2em;
 }
 
 .slogan {
+  text-align: center;
   position: absolute;
   color: yellow;
-  font-size: 1rem;
+  font-size: 0.5em;
   rotate: 15deg;
-  translate: -1.5rem -0.2rem;
+  translate: -1.5em -0.2em;
 }
 
 .slogan-wiggle {
@@ -69,5 +69,15 @@ body {
 }
 
 .nav {
+  display: inline-block;
   list-style: none;
+}
+
+.nav-item > a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.footer {
+  font-size: 0.5em;
 }
